CSS Color Fix
this color does not fit backgroundImage.

--- a/style.css
+++ b/style.css
@@ -140,5 +140,5 @@ html {
 }
 .blog-excerpt{
 	font-size:18px;
-	color:#2f2f2f;
+	color:#000;
 }
